# src/openapi.yaml
@@ -358,7 +358,7 @@ paths:
   /styles:
     get:
       tags:
-        - Use styles
+        - Styles
       summary: information about the available styles
       operationId: getStyles
       description: |-
@@ -382,13 +382,76 @@ paths:
                 type: string
             application/json:
               schema:
+                type: object
+                properties: 
+                  links:
+                    type: array
+                  styles:
+                    type: array
+        400:
+          $ref: "#/components/responses/ServerError"
+      security: 
+        - {}
+  /styles/{styleId}:
+    get:
+      tags:
+        - Styles
+      summary: fetch a style by id
+      description: |-
+        Fetches the style with identifier `styleId`. The set of
+        available styles can be retrieved at `/styles`.
+
+        Not all styles are available in all style encodings.
+      operationId: getStyle
+      parameters:
+        - $ref: "#/components/parameters/styleId"
+        - $ref: "#/components/parameters/fStyle"
+      responses:
+        200:
+          description: The style
+          content:
+            text/html:
+              schema:
+                type: string
+            application/vnd.mapbox.style+json:
+              schema:
                 $ref: "#/components/schemas/mbstyle"
         400:
           $ref: "#/components/responses/ServerError"
       security: 
         - {}
-  
 
+  /resources:
+    get: 
+      tags:
+        - Styles
+      summary: information about the available resources (symbols, sprites)
+      operationId: getResources
+      parameters:
+        - $ref: "#/components/parameters/fCommon"
+      responses: 
+        200: 
+          description: the set of available resources
+        400:
+          $ref: "#/components/responses/ServerError"
+      security: 
+        - {}
+
+  /resources/{resourceId}:
+    get: 
+      tags:
+        - Styles
+      summary: fetch a symbol resource by id
+      operationId: getResource
+      parameters:
+        - $ref: "#/components/parameters/resourceId"
+      responses: 
+        200: 
+          description: The symbol resource
+        400:
+          $ref: "#/components/responses/ServerError"
+      security: 
+        - {}   
 
 components:
   parameters:
@@ -419,6 +482,19 @@ components:
           - json
           - html
           - tilejson
+    fStyle:
+      name: f
+      in: query
+      description: >-
+        Select the output format of the response. If no value is provided, the
+        standard HTTP rules apply, i.e., the accept header will be used to
+        determine the format.
+      required: false
+      schema:
+        type: string
+        enum:
+          - mbs
+          - html
     query:
       name: q
       in: query
@@ -647,6 +723,20 @@ components:
       required: true
       schema:
         type: number
+    styleId:
+      name: styleId
+      in: path
+      description: Id of the style
+      required: true
+      schema:
+        type: string
+    resourceId:
+      name: resourceId
+      in: path
+      description: Id of the resource
+      required: true
+      schema:
+        type: string
   schemas:
     link:
       required:
